# ESII-Drone-Challenge

./: LICENSE  README.md
drone_challenge/launch/: empty_world.launch  takeoff_landing.launch
drone_challenge/plugins/: model_laser.cc
drone_challenge_test/launch/: empty_world.sh  takeoff_landing.sh
drone_challenge_test/plugins/: CMakeLists-gazebo6.txt  model_laser.hh  model_push.cc
drone_challenge_test/worlds/: empty.world  empty_laser.world  full.world  town.world
drone_model/: model.sdf
drone_model_test/: drone_model.pptx
home.user..gazebo.models.drone_model/: inercias.xlsx  model.config
matlab.drone_challenge/: autopilot_gazebo.slx  autopilot_gazebo.slx.r2015b  autopilot_simulink.slx  drone_config.m  model_linearization.slx  output_feedback_gazebo.slx  test_autopilot.slx  test_horizon2body.slx  test_stateflow.slx
matlab.drone_challenge/old_versions/2016-05/: autopilot_simulink.slx.r2015b  drone_config.m  linsys_x08y04.mat  output_feedback_simulink.slx  state_feedback_gazebo.slx  state_feedback_simulink.slx  test_joystick.slx  test_route_planner.slx
matlab.drone_challenge/old_versions/previos/: CTRL_keyboard.m  CTRL_timer.m  GazeboCommunicator.m  GazeboModel.m  GazeboSpawnedModel.m  KeyInput.m  quad_params.m  timer_autoPilot.m
opt.ros.kinetic.share.drone_challenge/: package.xml
opt.ros.kinetic.share.drone_challenge/launch/: empty_world.launch  pub_speeds  sub_speeds
opt.ros.kinetic.share.drone_challenge/plugins/: CMakeLists.txt
opt.ros.kinetic.share.drone_challenge/worlds/: takeoff_landing.world
