<package>
  <name>drone_gazebo</name>
  <version>1.0.0</version>
  <description>Gazebo launchers and worlds for Drone simulation</description>
  <maintainer email="rafael.casado@uclm.es">Rafael Casado</maintainer>
  <author email="rafael.casado@uclm.es">Rafael Casado</author>
  
  <run_depend>create_gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
</package>
